# rusty-renderer

./: Cargo.toml  README.md  build.rs
src/: color.rs  draw.rs  instance.rs  light.rs  light.wgsl  main.rs  material.rs  mesh.rs  model.rs  projection.rs  renderer.rs  shader.wgsl  state.rs  texture.rs  uniform.rs
src/camera/: fps_camera.rs  mod.rs  orbit_camera.rs
src/render/: light_renderer.rs  mod.rs  model_renderer.rs  renderer.rs
src/render/shaders/: light.wgsl  shader.wgsl
src/shaders/: shader.wgsl
