[package]
name = "wgpu-renderer"
version = "0.1.0"
authors = ["Richard Mills"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
cgmath = "0.18"
fs_extra = "1.2"
glob = "0.3"
image = "0.23"
winit = "0.25"
env_logger = "0.9"
log = "0.4"
rayon = "1.4"
tobj = "3.0"
wgpu = "0.10"
pollster = "0.2"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
